# EtherCAT-Simulate-System

./: README.md  colorDetect.py  slave_A.xml  slave_B.xml  slave_C.xml
SOES_A/applications/raspberry_lan9252demo/: CMakeLists.txt  back_main.c  back_slave_objectlist.c  main.c  slave_objectlist.c  utypes.h
SOES_A/cmake/: Linux.cmake
SOES_B/applications/raspberry_lan9252demo/: CMakeLists.txt  main.c  po_slave_objectlist.c  po_utypes.h  slave_objectlist.c
SOES_B/soes/applications/raspberry_lan9252demo/: DobotDll.h  DobotType.h  dobotdll_global.h  ecat_options.h  main.c  utypes.h
SOES_C/applications/raspberry_lan9252demo/: ecat_options.h  main.c  slave_objectlist.c  utypes.h
SOES_C/cmake/: Linux.cmake
